===============================================================
2007-02-06 Released 0.90.0 at revision 3003

2007-01-22 Extended the new picker API to text, patches and patch
           collections.  Added support for user customizable pick hit
           testing and attribute tagging of the PickEvent - Details
           and examples in examples/pick_event_demo.py - JDH

2007-01-16 Begun work on a new pick API using the mpl event handling
           frameowrk.  Artists will define their own pick method with
           a configurable epsilon tolerance and return pick attrs.
           All artists that meet the tolerance threshold will fire a
           PickEvent with artist dependent attrs; eg, a Line2D can set
           the indices attribute that shows the indices into the line
           that are within epsilon of the pick point.  See
           examples/pick_event_demo.py.  The implementation of pick
           for the remaining Artists remains to be done, but the core
           infrastructure at the level of event handling is in place
           with a proof-of-concept implementation for Line2D - JDH

2007-01-16 src/_image.cpp: update to use Py_ssize_t (for 64-bit systems).
           Use return value of fread() to prevent warning messages - SC.

2007-01-15 src/_image.cpp: combine buffer_argb32() and buffer_bgra32() into
           a new method color_conv(format) - SC

2007-01-14 backend_cairo.py: update draw_arc() so that
           examples/arctest.py looks correct - SC

2007-01-12 backend_cairo.py: enable clipping. Update draw_image() so that
           examples/contour_demo.py looks correct - SC

2007-01-12 backend_cairo.py: fix draw_image() so that examples/image_demo.py
           now looks correct - SC

2007-01-11 Added Axes.xcorr and Axes.acorr to plot the cross
           correlation of x vs y or the autocorrelation of x.  pylab
           wrappers also provided.  See examples/xcorr_demo.py - JDH
