@@ -1,3 +1,7 @@
+2006-02-07 Committed Rob Hetland's patch for qt4: remove 
+           references to text()/latin1(), plus some improvements 
+           to the toolbar layout - DSD
+
 ===============================================================
 2007-02-06 Released 0.90.0 at revision 3003
 
